dev images + homepage impl

--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -2,4 +2,9 @@
 @import "_settings";
 @import "_mixin";
 @import "_general";
-@import "_tmp";
+//@import "_tmp";
+@import "_header";
+@import "_main";
+@import "_footer";
+@import "_mobile";
+
