--- a/style/scss/_general.scss
+++ b/style/scss/_general.scss
@@ -1,22 +1,24 @@
 * {
-  /* So 100% means 100% */
-  box-sizing: border-box;
+	/* So 100% means 100% */
+	box-sizing: border-box;
 }
 html, body {
-  /* Make the body to be as tall as browser window */
-  height: 100%;
-  font-size:100%;
+	font-size:100%;
 }
 
-.draggable-containment{
-	width:100%;
-	height:100%;
-	padding:1em 1em 0;
-	@include calc("height", "100% - 3em");
-
-
+form input {
+	font-family: "Arial", sans-serif;
+}
+ 
+body {
+	font-family: "Arial", sans-serif;
+    font-size: 100%;
+    line-height: 1em;
+    margin: 0 auto;
+    background: rgb(255, 255, 255);
 }
 
-.js-content{
-	display:none;
+.wrapper {
+    width: 100%;
+    position: relative;
 }
