--- a/style/scss/_mixin.scss
+++ b/style/scss/_mixin.scss
@@ -10,3 +10,17 @@
 	#{$property}: -webkit-calc(#{$expression}); 
 	#{$property}: calc(#{$expression}); 
 }
+
+@mixin rounded($radius: 0.5em) {
+  -webkit-border-radius: $radius;
+  -moz-border-radius: $radius;
+  border-radius: $radius;
+}
+
+@mixin clearfix {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
