--- a/style/scss/_settings.scss
+++ b/style/scss/_settings.scss
@@ -5,3 +5,8 @@ $font-m:	1.0em;	//16px
 $font-l:	1.0em;	//20px
 $font-xl:	1.0em;	//24px
 $font-xxl:	1.0em;	//30px
+
+$red:	#f00;
+$blue:	#00f;
+$green:	#0f0;
+
