--- a/style/scss/_tmp.scss
+++ b/style/scss/_tmp.scss
@@ -1,12 +1,3 @@
-/* **********************
-our mobile-first styles
-*********************** */
-
-/* **********************
-these styles will override
-our mobile-first styles for
-larger displays
-*********************** */
 
 @media only screen and (min-width:0px) {
   /* Style adjustments for viewports 520px and over go here */
@@ -34,7 +25,7 @@ larger displays
     padding: 0 10%;
     background: rgb(200, 200, 200);
   }
-  section#main {
+  section .main {
     padding: 0 10%;
     background: rgb(255, 255, 255);
   }
