--- a/style/scss/_general.scss
+++ b/style/scss/_general.scss
@@ -7,11 +7,11 @@ html, body {
 }
 
 form input {
-	font-family: "Arial", sans-serif;
+	font-family: 'PT Sans Narrow', 'sans-serif';
 }
  
 body {
-	font-family: "Arial", sans-serif;
+	font-family: 'PT Sans Narrow', 'sans-serif';
     font-size: 100%;
     line-height: 1em;
     margin: 0 auto;
