--- a/style/scss/_header.scss
+++ b/style/scss/_header.scss
@@ -1,18 +1,34 @@
 header {
 	padding: 0 10%;
-	background: $green-dark url('../../images/header_background.jpg') repeat-x;
+	background: $green-dark url('../../images/header_background.png') repeat-x;
 	height:145px;
 
 	.wrapper{
-		background: transparent url('../../images/header_logo.png') no-repeat;
-		background-position: 50% 30%;
 		height:145px;
 	}
 
-	h1{
+	h1.header-logo-left{
 		display:block;
-		width:100%;
-		height:112px;
+		float:left;
+		width:50%;
+		height:110px;
+		background: transparent url('../../images/header_logo_left.svg') no-repeat;
+		background-position: 50% 40%;
+		a{
+			display:block;
+			width:100%;
+			height:112px;
+			text-indent: -9999px;
+		}
+	}
+
+	h2.header-logo-right{
+		display:block;
+		float:right;
+		width:30%;
+		height:110px;
+		background: transparent url('../../images/header_logo_right.svg') no-repeat;
+		background-position: 50% 50%;
 		a{
 			display:block;
 			width:100%;
@@ -22,7 +38,7 @@ header {
 	}
 
 	.main-menu{
-		padding-top:0.5em;
+		padding:0.5em 0 0 13em;
 		float:left;
 		ul li{
 			display:inline-block;
