--- a/style/scss/_main.scss
+++ b/style/scss/_main.scss
@@ -25,6 +25,7 @@
 		h1{
 			text-align:center;
 			font-size:$font-xl;
+			font-weight:bold;
 			padding:0 0 0.5em 0;
 		}
 
@@ -36,7 +37,7 @@
 		.logo-element{
 			height:2em;
 			width:2em;
-			background: url('../../images/graphic_black.png') no-repeat transparent;
+			background: url('../../images/znak_black.svg') no-repeat transparent;
 			background-position: 50% 50%;
 			background-size: contain;
 			margin: 0.5em auto;	
@@ -86,9 +87,13 @@
 		h2{
 			font-weight:bold;
 			font-size:$font-xl;
-			margin:0em 1.625em 0em;
+			margin:0em 1.625em 0em 1.625em;
+			//@include calc(margin-right, "33.3% - 30px");
 			padding:3em 0em 0.2em;
 			border-bottom:1px solid $gold;
+			background: url('../../images/znak_gold.svg') no-repeat transparent;
+			background-position: right 90%;
+			background-size:30px;
 		}
 
 		p.box-text{
@@ -112,6 +117,7 @@
 				text-decoration:none;
 				font-weight:bold;
 				color:$black;
+				border-bottom:1px solid $gold;
 			}
 			a:hover{
 				color:$gold;
