--- a/style/scss/_general.scss
+++ b/style/scss/_general.scss
@@ -4,18 +4,18 @@
 }
 html, body {
 	font-size:100%;
+    background:$green-dark;
 }
 
 form input {
-	font-family: 'PT Sans Narrow', 'sans-serif';
+    font-family: 'PT Sans Narrow', 'sans-serif';
 }
  
 body {
-	font-family: 'PT Sans Narrow', 'sans-serif';
+    font-family: 'PT Sans Narrow', 'sans-serif';
     font-size: 100%;
     line-height: 1em;
     margin: 0 auto;
-    background: rgb(255, 255, 255);
 }
 
 .wrapper {
