--- a/style/scss/_footer.scss
+++ b/style/scss/_footer.scss
@@ -7,6 +7,7 @@ footer {
 		background: transparent url('../../images/footer_logo.png') no-repeat;
 		background-position: 50% 30%;
 		height:140px;
+		background-size: 50%;
 	}
 
 	.address{
