--- a/style/scss/_mobile.scss
+++ b/style/scss/_mobile.scss
@@ -13,16 +13,23 @@
 	}
 
 	.text{
+		padding:0 10% 20px 10%;
 		.box{
 			margin: 1em 0em;
 
-			h2{
-				margin:0em 0.425em 0em;
+
+			.header{
+				margin:0em 10px 0em;
 				padding:3em 0em 0.2em;
 			}
 
 			p.box-text{
-				padding:0.5em 0.5em 1em;
+				padding:0.5em 10px 1em;
+				min-height: inherit;
+			}
+
+			.more{
+				padding:0 10px 0 0;
 			}
 		}
 
@@ -67,13 +74,22 @@
 			padding:1em 0;
 			}
 		}
+
+		.lang-menu{
+			float:none;
+			text-align:center;
+			width:100%;
+			ul{
+			padding:0em 0 1em;
+			}
+		}
 	}
 
 	footer {
 		
 		.wrapper{
 			background-size: contain;
-			background-position: 50% 30%;
+			background-position: 100% 50%;
 			background-size: 50%;
 			height:auto;
 		}
@@ -92,6 +108,7 @@
 	}
 
 	.text{
+		padding:0 2% 20px 2%;
 		.box{
 			width:100%;
 			float:none;
