--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -5,6 +5,7 @@
 //@import "_tmp";
 @import "_header";
 @import "_main";
+@import "_sales";
 @import "_footer";
 @import "_mobile";
 @import "_forms";
