--- a/style/scss/_settings.scss
+++ b/style/scss/_settings.scss
@@ -13,6 +13,8 @@ $font-m:	1.0em;	//16px
 $font-l:	1.125em;	//20px
 $font-xl:	1.25em;	//24px
 $font-xxl:	1.5em;	//30px
+$font-xxxl:	2em;	//30px
+
 
 $red:	#f00;
 $blue:	#00f;
