--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -6,6 +6,7 @@
 @import "_header";
 @import "_main";
 @import "_sales";
+@import "_contact";
 @import "_footer";
 @import "_mobile";
 @import "_forms";
