--- a/style/scss/_forms.scss
+++ b/style/scss/_forms.scss
@@ -1,3 +1,7 @@
+.form-headline{
+
+}
+
 	.form-label{
 		padding:1em 0 0 0;
 	}
@@ -43,5 +47,6 @@
 			background:$gold;
 			color:$white;
 			padding:0.5em 2em;
+			text-transform: uppercase;
 		}
 	}
