--- a/style/scss/_main.scss
+++ b/style/scss/_main.scss
@@ -81,10 +81,11 @@
 	.wrapper{
 		overflow: hidden;
 		margin:0 0 3em 0;
+		padding:0 0 2em;
 	}
 
 	.box {
-		width: 33.3%;
+		width: 33%;
 		float: left;
 		margin: 3em 0em;
 
