--- a/style/scss/_main.scss
+++ b/style/scss/_main.scss
@@ -2,7 +2,7 @@
 	padding: 0 10%;
 	
 	&.js-background{
-		background-image: url('../../images/1.jpg');
+		background-image: url('../../images/new1.jpg');
 		background-position: 50% 50%;
 		background-size: cover;
 		@include transition(all, 1s, ease-in-out);
